Fri May 10 01:46:25 1996  Richard Basch  <basch@lehman.com>

	* d3_str2ky.c d3_procky.c des_int.h init_rkey.c:
	Replace des3-md5 with des3-sha

Thu May  2 18:29:01 1996  Richard Basch  <basch@lehman.com>

	* d3_rndky.c new_rn_key.c: Removed (obsolete).

	* u_rn_key.c: New file
		Support routines to set the seed/sequence number of the
		random stream.

	* Makefile.in: new/removed file changes

	* des_int.h: Changed prototypes for all the random routines.

	* fin_rndkey.c: rewrote mit_des_finish_random_key to use the new
		random state structure and to accept an eblock as arg 1.

	* init_rkey.c: rewritten to be a common DES, 3-DES random stream
		initialization routine.  it uses the eblock to determine
		the random key type to generate.
		
	* random_key.c: rewritten to be a common DES, 3-DES random stream
		generator, using the former DES algorithm (encrypting an
		incrementing sequence number with a unique key schedule)
		[3-DES uses DES3-CBC-CRC to increment a 192 bit sequence
		number, instead of being only as secure as DES.]

Wed Apr 10 17:46:40 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (SRCS,OBJS): Added afsstring2key.c to the list of
		files to be compiled.

Sat Mar 30 22:56:48 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (SRCS): Took the list of sources and object files in
		FSRCS, FOBJS, D3OBJS, and D3SRCS, and inlined them into
		the OBJS and SRCS list.  This is necessary so that the
		files are correctly picked up for the Macintosh build.

Thu Mar 28 10:49:31 1996  Richard Basch  <basch@lehman.com>

	* init_rkey.c, d3_str2ky.c, d3_procky.c: Support ENCTYPE_DES3_CBC_RAW

	* des_int.h: Support CKSUMTYPE_DES3_CBC_MD5

Wed Mar 20 22:33:40 1996  Theodore Y. Ts'o  <tytso@dcl>

	* u_nfold.c (mit_des_n_fold): 
	* d3_str2ky.c (mit_des3_string_to_key): Fix Windows lint flames.

Mon Mar 11 11:03:23 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* new_rn_key.c (mit_des_generate_random_block): Add const keywrod
		to cast for suncc warning.
